v410-error-code-rn-update

--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/10300.global_major_freeze_residual_memory.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/10300.global_major_freeze_residual_memory.md
@@ -13,7 +13,7 @@ global_major_freeze_residual_memory
 |------------------|-----------|
 | Type | Integer |
 | Default value | 40 |
-| Value range | [1,99] |
+| Value range | [1, 99] |
 | Effective upon restart of OBServer node | No |
 
 
