--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/13200.max_px_worker_count.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/13200.max_px_worker_count.md
@@ -8,5 +8,5 @@ max_px_worker_count
 |------------------|--------------|
 | Type | Integer |
 | Default value | 64 |
-| Value range | [0,65535] |
+| Value range | [0, 65535] |
 | Effective upon restart of OBServer node | No |
