--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/13900.memstore_limit_percentage.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/13900.memstore_limit_percentage.md
@@ -7,7 +7,7 @@
 |------------------|-----------|
 | Type | Integer |
 | Default value | 50 |
-| Value range | [1,99] |
+| Value range | [1, 99] |
 | Effective upon restart of OBServer node | No |
 
 
