--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/3000.balancer_tolerance_percentage.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/3000.balancer_tolerance_percentage.md
@@ -8,5 +8,5 @@
 |------------------|-----------|
 | Type | Integer |
 | Default value | 10 |
-| Value range | [1,99] |
+| Value range | [1, 99] |
 | Effective upon restart of OBServer node | No |
