--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/5300.datafile_disk_percentage.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/5300.datafile_disk_percentage.md
@@ -13,7 +13,7 @@
 |------------------|----------|
 | Type | Integer |
 | Default value | 0 |
-| Value range | \[0,99] |
+| Value range | \[0, 99] |
 | Effective upon restart of OBServer node | No |
 
 
