--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/1800.major_compact_trigger.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/1800.major_compact_trigger.md
@@ -12,7 +12,7 @@
 |------------------|--------------|
 | Type | Integer |
 | Default value | 0 |
-| Value range | [0,65535] |
+| Value range | [0, 65535] |
 | Effective upon restart of OBServer node | No |
 
 
