--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/2200.minor_compact_trigger.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/2200.minor_compact_trigger.md
@@ -8,7 +8,7 @@
 |------------------|-----------|
 | Type | Integer |
 | Default value | 2 |
-| Value range | [0,16] |
+| Value range | [0, 16] |
 | Effective upon restart of OBServer node | No |
 
 
