--- a/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/700.ora-10000-to-ora-19999-of-oracle-mode.md
+++ b/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/700.ora-10000-to-ora-19999-of-oracle-mode.md
@@ -1,4 +1,4 @@
-# ORA-10000 - ORA-19999
+# ORA-10000 to ORA-19999
 
   <main id="notice" >
     <h4>Applicability</h4>
@@ -266,7 +266,6 @@ ORA-12827: insufficient parallel query worker available
 
 * Solution: Increase the value of `parallel_servers_target` and execute the query again, or wait for slaves to be released after some ongoing queries are completed.
 
-ORA-12899: value
 ORA-12899: value too large for column '%.\*s' at row %ld
 ----------------------------------------------------------------------------
 
