--- a/en-US/900.release-notes/10200.community-edition-history-release/9900.V4.1/9800.V4.1.0.md
+++ b/en-US/900.release-notes/10200.community-edition-history-release/9900.V4.1/9800.V4.1.0.md
@@ -582,7 +582,7 @@ BenchmarkSQL V5.0
 | `_ob_plan_cache_auto_flush_interval` | The interval for periodically flushing the plan cache.  | Default value: 0s, which specifies not to automatically flush the plan cache.  | V4.1 |
 | `enable_user_defined_rewrite_rules` | Specifies whether to enable user-defined rules.  | Default value: False.  | V4.1 |
 
-### Note
+### Considerations
 
 * An online upgrade from OceanBase Database V3.x to OceanBase Database V4.x is not supported.
 * You can use OMS to migrate the data logic of OceanBase Database V3.x to OceanBase Database V4.1.
@@ -633,7 +633,7 @@ This version fixes some bugs and improves stability.
 * Fixed a disconnection issue caused by the lack of updating session active time in the response logic of COM_PING.
 * Fixed the bug where the `OUTPUT_BYTES` statistics in the `CDB_OB_BACKUP_SET_FILES` view was not accurate.
 
-### Note
+### Considerations
 
 * OBD V2.0.0 does not support the upgrade of OceanBase Database from V4.0.0 to V4.1.0.
 * OCP V4.0.3_CE now supports the upgrade of OceanBase Database from V4.0.0 to V4.1.0.
@@ -659,8 +659,90 @@ This version fixes some bugs and improves stability.
 * Fixed a bug where plan cache eviction would fail if an SQL execution plan occupies too much memory and contains expressions that cannot be parameterized.
 * Fixed a bug related to encoding data estimation error, which resulted in the writing of more than 2 MB of encoded data into the macroblock memory buffer. This bug would result in macroblock serialization failure, which in turn caused the major compaction to be stuck.
 
-### Note
+### Considerations
 
 OBD V2.1.0 and later support the upgrade of OceanBase Database from V4.0.0 to V4.1.0. 
 
+## V4.1.0_CE_BP1_HF1
 
+### Version information
+
+* Release date: May 19, 2023
+* Version: V4.1.0_CE_BP1_HF1
+
+### Overview
+
+This version fixed some bugs and improved stability.
+
+### Bug fixes
+
+* Fixed data exceptions caused by inter-column equidistant encoding.
+* Fixed the possible data write failures caused by `tablet_id` change in the `TRUNCATE TABLE` scenario.
+
+## V4.1.0_CE_BP2
+
+### Version information
+
+* Release date: June 15, 2023
+* Version: V4.1.0_CE_BP2
+
+
+### Overview
+
+* This version includes compatibility with MySQL's `SHOW CREATE TABLE` statement to meet the needs of related tools.
+* User and internal testing issues are also addressed to improve version stability.
+
+### Bug fixes
+
+* Fixed an issue where querying the `TABLE_CONSTRAINTS` view would fail when the system variable `lower_case_table_names` was set to 0.
+* Fixed an issue where refreshing the schema after system restart with a large number of partitions caused Proxy to hang when establishing a connection.
+* Fixed an issue where data write operations reported error 4017 due to reference count leakage after inserting over 1 billion rows into an unpartitioned table with no primary key.
+* Fixed an issue where large transactions involving full table updates continued to report error 4138.
+* Fixed compatibility issues with the ObDDLStartLog structure that could cause failures when upgrading from V4.0.0_CE and V4.0.0_CE_BP1 to later versions.
+* Fixed an issue where excessive memory was used by SQL Audit during cluster data playback after restart.
+* Fixed an issue where abnormal column equal encoding resulted in data exceptions.
+* Fixed an issue where core dump might be triggered when `timezone info` is modified concurrently.
+* Added support for complete compatibility with MySQL's `SHOW CREATE TABLE` statement by setting the session variable `_show_ddl_in_compat_mode`.
+
+
+### Considerations
+
+* If you are using V4.0.0_CE or V4.0.0_CE_BP1, we recommend that you upgrade directly to V4.1.0_CE_BP2 to avoid possible log playback compatibility issues during the upgrade process.
+
+* If you have unpartitioned tables with large amounts of data and no primary keys, we recommend that you upgrade directly to V4.1.0_CE_BP2 to avoid potential errors that may occur during data write operations.
+
+
+## V4.1.0_CE_BP3
+
+### Version information
+
+* Release date: August 14, 2023
+* Version: V4.1.0_CE_BP3
+
+### Overview
+
+1. OBKV now supports aggregate functions (such as MIN, MAX, and COUNT), auto-increment columns, and row data verification during data insertion.
+2. Two hidden parameters `_ha_get_tablet_info_batch_count` and `_ha_rpc_timeout` are added to control the number of tablets obtained per RPC call and the RPC timeout during operations such as migration replication, rebuild, and physical restore. These parameters are suitable for scenarios where the SATA disk I/O is slow.
+3. The `DBMS_RESOURCE_MANAGER` system package is now available in the community edition. 
+4. Issues encountered by customers and during internal tests are resolved to improve the stability of the product. 
+
+### Bug fixes
+
+* [Fixed an issue that after the `LIMIT pushdown` statement is rewritten, the execution result of a LIMIT clause containing the RAND function is incorrect.](https://github.com/oceanbase/oceanbase/commit/a6dfba10a989e1dd4be972f3462c7dbf4d69ddcf) 
+* [Fixed an issue that if an expression contains functions such as USERENV and SYSDATE, the query result is inaccurate due to an incorrect query range.](https://github.com/oceanbase/oceanbase/commit/4d0d02c289c265f2c67a54fe4f0864dd5ac30628) 
+* [Fixed an issue that in the Prepared Statement (PS) protocol, a `zero datetime` value of the DATETIME type is not fully compatible with MySQL when an OBServer node sends a packet to the client. As a result, the query result on the client of the Go driver is abnormal.](https://github.com/oceanbase/oceanbase/commit/e468ffca577ed0f09af46aec42748e60be32e399) 
+* [Fixed an issue that when the GROUP BY clause is used in a join of two tables, the returned result set does not meet the expectations.](https://github.com/oceanbase/oceanbase/commit/18ee867100771e78a7c5167cee40f7099aa80d93) 
+* [Fixed an issue that in a scenario where the cgroup feature is enabled and `sql_nio` is disabled, a core dump may occur due to the use of the PS protocol.](https://github.com/oceanbase/oceanbase/commit/4c41469432c6cace9aa625ce714a1ad24e0ab65b) 
+* [Fixed an issue that if the CPU resources remain exhausted for a period of time, an OBKV request may time out and thereby cause a core dump.](https://github.com/oceanbase/oceanbase/commit/36b87b2a573dae36395af94f0f9edf4d9cc9b1a3) 
+* [Fixed an issue that after the character set of a tenant is changed by using the ALTER DATABASE statement, the character set displayed in the `information_schema.SCHEMATA` view is incorrect.](https://github.com/oceanbase/oceanbase/commit/0b98ed130900c4faafc816f55f353d2339fc6080) 
+* [Fixed an issue that when a large number of DDL operations are performed on a single table, the minor compaction threads may be stuck due to too many involved partitions or intensive writes, which results in an out of memory (OOM) error.](https://github.com/oceanbase/oceanbase/commit/fb4d14feb7fbb184b719193b510ab1ccaf2f486a) 
+* [Fixed an issue that after the DOUBLE type is converted into the INT type in a query statement, the query result is inaccurate due to an incorrect query range.](https://github.com/oceanbase/oceanbase/commit/e2a70badf9916eddd7d26e7c7140820d4c24d3b9) 
+* [Fixed an issue that when an INSERT operation is performed in a scenario with a large data volume, a minor or major compaction will trigger a retry of the INSERT operation, which may result in discontinuous auto-increment IDs.](https://github.com/oceanbase/oceanbase/commit/bd127f7af216c49f7b40d75d1c3e0b1cf9f82655) 
+* [Fixed an issue that during bypass import, the memory is used up because data of the ObArray type occupies memory of the sys500 tenant.](https://github.com/oceanbase/oceanbase/commit/70ddda157c4b2bbade7d603959fe8a612eec26ae) 
+* [Fixed an issue that when too many sessions exist in the `sys` tenant, the client may return the error `session already exists`.](https://github.com/oceanbase/oceanbase/commit/c9416aae8c7c06b7fa86b948fecc2018a94586cf) 
+* [Fixed an issue that SqlExecutor memory bloats when a tenant with minimum specifications obtains the schemas.](https://github.com/oceanbase/oceanbase/commit/9619bf85ce386b48c9f621126e4a49bec7e4a8ed) 
+* [Optimized the performance in CPU over-allocation scenarios after the cgroup feature is enabled.](https://github.com/oceanbase/oceanbase/commit/03109f62e61f64f99188c6566db2f60c54c4ee1c) 
+
+### Considerations
+
+OceanBase Database Community Edition can be directly upgraded from V4.1.0_CE_BP3 to V4.2.0 GA but not to V4.2.0_CE_Beta. 
