--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/10600.global_write_halt_residual_memory.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/10600.global_write_halt_residual_memory.md
@@ -6,7 +6,7 @@
 |------------------|-----------|
 | Type | Integer |
 | Default value | 30 |
-| Value range | [1,99] |
+| Value range | [1, 99] |
 | Effective upon restart of OBServer node | No |
 
 
