--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/27500.restore_concurrency.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/300.cluster-level-configuration-items/27500.restore_concurrency.md
@@ -13,5 +13,5 @@ restore_concurrency
 |------------------|------------|
 | Type | Integer |
 | Default value | 0 |
-| Value range | [0,512] |
+| Value range | [0, 512] |
 | Effective upon restart of OBServer node | No |
