--- a/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/100.use-error-information-of-oracle-mode.md
+++ b/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/100.use-error-information-of-oracle-mode.md
@@ -10,27 +10,27 @@ This topic describes the error messages for Oracle tenants in OceanBase Database
 
 Value ranges of error codes in OceanBase Database:
 
-* [ORA-00000 - ORA-00999](../700.error-code-of-oracle-mode/200.ora-00000-to-ora-00999-of-oracle-mode.md)
+* [ORA-00000 to ORA-00999](../700.error-code-of-oracle-mode/200.ora-00000-to-ora-00999-of-oracle-mode.md)
 
-* [ORA-01000 - ORA-01499](../700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md)
+* [ORA-01000 to ORA-01499](../700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md)
 
-* [ORA-01500 - ORA-01999](../700.error-code-of-oracle-mode/400.ora-01500-to-ora-01999-of-oracle-mode.md)
+* [ORA-01500 to ORA-01999](../700.error-code-of-oracle-mode/400.ora-01500-to-ora-01999-of-oracle-mode.md)
 
-* [ORA-02000 - ORA-04999](../700.error-code-of-oracle-mode/500.ora-02000-to-ora-04999-of-oracle-mode.md)
+* [ORA-02000 to ORA-04999](../700.error-code-of-oracle-mode/500.ora-02000-to-ora-04999-of-oracle-mode.md)
 
-* [ORA-05000 - ORA-10000](../700.error-code-of-oracle-mode/600.ora-05000-to-ora-10000-of-oracle-mode.md)
+* [ORA-05000 to ORA-10000](../700.error-code-of-oracle-mode/600.ora-05000-to-ora-10000-of-oracle-mode.md)
 
-* [ORA-10000 - ORA-19999](../700.error-code-of-oracle-mode/700.ora-10000-to-ora-19999-of-oracle-mode.md)
+* [ORA-10000 to ORA-19999](../700.error-code-of-oracle-mode/700.ora-10000-to-ora-19999-of-oracle-mode.md)
 
-* [ORA-20000 - ORA-29999](../700.error-code-of-oracle-mode/800.ora-20000-to-ora-29999-of-oracle-mode.md)
+* [ORA-20000 to ORA-29999](../700.error-code-of-oracle-mode/800.ora-20000-to-ora-29999-of-oracle-mode.md)
 
-* [ORA-30000 - ORA-49999](../700.error-code-of-oracle-mode/900.ora-30000-to-ora-49999-of-oracle-mode.md)
+* [ORA-30000 to ORA-49999](../700.error-code-of-oracle-mode/900.ora-30000-to-ora-49999-of-oracle-mode.md)
 
 * [ORA-50000 - ORA-99999](../700.error-code-of-oracle-mode/1000.ora-50000-to-ora-99999-of-oracle-mode.md)
 
-* [PLS-00000 - PLS-00999](../700.error-code-of-oracle-mode/1100.pls-00000-to-pls-00999-of-oracle-mode.md)
+* [PLS-00000 to PLS-00999](../700.error-code-of-oracle-mode/1100.pls-00000-to-pls-00999-of-oracle-mode.md)
 
-Error messages indicated by the preceding error codes are compatible with those in Oracle databases. For more information about error messages in Oracle databases, visit <https://docs.oracle.com/en/database/oracle/oracle-database/21/errmg/>.
+Error messages indicated by the preceding error codes are compatible with those in Oracle databases. For more information about error messages in Oracle databases, see [Database Error Messages](https://docs.oracle.com/en/database/oracle/oracle-database/21/errmg/).
 
 Format of error messages
 ---------------------------
@@ -80,4 +80,4 @@ In Oracle tenants of OceanBase Database, for errors that are incompatible with O
 ORA-00600: internal error code, arguments: %d, %s
 ```
 
-`%d` indicates an error code in OceanBase Database, and `%s` indicates the error message in OceanBase Database.
+Here, `%d` indicates an error code in OceanBase Database, and `%s` indicates the error message in OceanBase Database.
