v410-broken-link-fix

--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/200.system-configuration-items-overview-list.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/200.system-configuration-items-overview-list.md
@@ -246,7 +246,7 @@ This topic describes cluster- and tenant-level parameters in OceanBase Database.
 | [ssl_client_authentication](300.cluster-level-configuration-items/19400.ssl_client_authentication.md) | Specifies whether to enable SSL authentication.  |
 | [stack_size](300.cluster-level-configuration-items/19600.stack_size.md) | The size of the function call stack for programs.  |
 | [tenant_task_queue_size](300.cluster-level-configuration-items/21600.tenant_task_queue_size.md) | The request queue size of each tenant.  |
-| [zone](300.cluster-level-configuration-items/23300.zone-parameter.md) | The name of the zone where the node is located. This parameter is generally left unspecified.  |
+| [zone](300.cluster-level-configuration-items/23300.zone-cluster.md) | The name of the zone where the node is located. This parameter is generally left unspecified.  |
 | [ssl_external_kms_info](300.cluster-level-configuration-items/19500.ssl_external_kms_info.md) | The information that the SSL feature of OceanBase Database relies on, which is recorded in JSON strings for different SSL modes. Such a JSON string contains at least the `ssl_mode` field.  |
 | [recyclebin_object_expire_time](300.cluster-level-configuration-items/16600.recyclebin_object_expire_time.md) | The period during which a schema object can be retained in the recycle bin. After the period elapses, the object will be purged from the recycle bin.  |
 | [default_row_format](300.cluster-level-configuration-items/5900.default_row_format.md) | The default row format used in table creation in MySQL mode.  |
