--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/1600.alter-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/1600.alter-table-of-mysql-mode.md
@@ -17,7 +17,7 @@ alter_table_action:
       ADD [COLUMN] column_definition  
           [ opt_position_column ]
     | ADD [COLUMN] (column_definition_list)
-    | ADD [CONSTRAINT [constraint_name]] UNIQUE {INDEX | KEY} 
+    | ADD [CONSTRAINT [constraint_name]] {SPATIAL | UNIQUE} {INDEX | KEY} 
           [index_name] index_desc
     | ADD [CONSTRAINT [constraint_name]] FOREIGN KEY
           [index_name] index_desc
@@ -157,6 +157,7 @@ partition_count | subpartition_count:
 | ALTER \[COLUMN\] {SET DEFAULT const_value \| DROP DEFAULT} | 修改列的默认值。  |
 | DROP \[COLUMN\]                                            | 删除列，不允许删除主键列或者包含索引的列。   |
 | ADD FOREIGN KEY                                            | 增加外键。 如果不指定外键名，则会使用表名 + `OBFK` + 创建时间命名。（例如，在 2021 年 8 月 1 日 00:00:00 为 `t1` 表创建的外键名称为 `t1_OBFK_1627747200000000`）。 |
+| SPATIAL         |指定为空间索引。|
 | ALTER INDEX                                                | 修改索引是否可见，当索引状态为 `INVISIBLE` 时，SQL 优化器将不会选择该索引。    |
 | ADD \[PARTITION\]                                          | 为分区表增加分区。  |
 | DROP {PARTITION \| SUBPARTITION}                           | 删除分区： <ul><li> `PARTITION`：针对 Range、List 类型的一级分区，删除指定分区（如果指定分区下存在二级分区，会同时删除该分区下所有二级分区）， 包括分区定义和其中的数据，同时对分区上存在的索引进行维护。</li>   <li> `SUBPARTITION`：针对 `*-RANGE`、`*-LIST` 类型的二级分区，删除指定二级分区，包括分区定义和其中的数据。同时对分区上存在的索引进行维护。</li></ul>    多个分区名称之间用逗号分隔。<br> **注意**  删除分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者一些异常情况。   |
@@ -364,6 +365,23 @@ obclient> DESCRIBE tbl1;
     <h4>说明</h4>
     <p>在实际运维场景中，您可以通过以上方式实现索引的原子性变更。</p>
   </main>
+
+* 创建表 `t1_spa` 后，在 `g` 列上创建一个空间索引 `t1_g_idx1`。
+  
+  ```shell
+  obclient> CREATE TABLE t1_spa(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 4326);
+  Query OK, 0 rows affected
+  obclient> ALTER TABLE t1_spa ADD SPATIAL INDEX t1_g_idx1(g);
+  Query OK, 0 rows affected
+  
+  obclient> SHOW INDEX FROM t1_spa;
+  +--------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
+  | Table  | Non_unique | Key_name  | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible | Expression |
+  +--------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
+  | t1_spa |          1 | t1_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     | NULL       |
+  +--------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
+  1 row in set
+  ```
 
 ### 分区操作
 
