--- a/zh-CN/200.quickstart/100.quickly-experience-oceanbase/200.quickly-experience-oceanbase-for-community.md
+++ b/zh-CN/200.quickstart/100.quickly-experience-oceanbase/200.quickly-experience-oceanbase-for-community.md
@@ -121,7 +121,7 @@ bash -c "$(curl -s https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/downl
       obd cluster edit-config demo
       ```
 
-      执行上述命令打开配置文件后，在配置文件中 oceanbase-ce（社区版）/oceanbase（企业版） 组件下添加 `root_password: xxxx`，添加完成后保存退出。示例如下：
+      执行上述命令打开配置文件后，在配置文件中 oceanbase-ce 组件下添加 `root_password: xxxx`，添加完成后保存退出。示例如下：
 
       ```yaml
       oceanbase-ce:
