--- a/zh-CN/100.users-guide/200.Get-started-quickly/000.Quickly-experience-OceanBase.md
+++ b/zh-CN/100.users-guide/200.Get-started-quickly/000.Quickly-experience-OceanBase.md
@@ -106,7 +106,7 @@ sudo yum install -y ob-deploy
    执行 `obd clustere display` 命令会自动输出连接命令，复制连接命令执行即可连接 OceanBase 数据库，连接命令示例如下。
 
    ```shell
-   obclient -h10.10.10.1 -P2881 -uroot@test -p****** -Doceanbase -A
+   obclient -h10.10.10.1 -P2881 -uroot -p****** -Doceanbase -A
    ```
 
    使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 租户](../../1400.developer-guide/000.connect-to-oceanbase-database/300.connect-oceanbase-tenants-through-obclient.md)。
